--- a/.hintrc
+++ b/.hintrc
@@ -9,6 +9,21 @@
         "link-name": "off",
         "button-name": "off"
       }
+    ],
+    "compat-api/css": [
+      "default",
+      {
+        "ignore": [
+          "-webkit-overflow-scrolling",
+          "scroll-behavior"
+        ]
+      }
+    ],
+    "axe/text-alternatives": [
+      "default",
+      {
+        "image-alt": "off"
+      }
     ]
   }
 }
