--- a/.hintrc
+++ b/.hintrc
@@ -30,6 +30,8 @@
       {
         "label": "off"
       }
-    ]
+    ],
+    "detect-css-reflows/layout": "off",
+    "no-inline-styles": "off"
   }
 }
