incrementation du nombre et maj du solde

--- a/.hintrc
+++ b/.hintrc
@@ -32,6 +32,8 @@
       }
     ],
     "detect-css-reflows/layout": "off",
-    "no-inline-styles": "off"
+    "no-inline-styles": "off",
+    "detect-css-reflows/composite": "off",
+    "detect-css-reflows/paint": "off"
   }
 }
