--- a/.hintrc
+++ b/.hintrc
@@ -34,6 +34,7 @@
     "detect-css-reflows/layout": "off",
     "no-inline-styles": "off",
     "detect-css-reflows/composite": "off",
-    "detect-css-reflows/paint": "off"
+    "detect-css-reflows/paint": "off",
+    "button-type": "off"
   }
 }
